--- a/style.css
+++ b/style.css
@@ -112,7 +112,27 @@ body {
 }
 
 
+.profileImageWrapper {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    overflow: hidden;
 
+    margin: auto;
+    cursor: pointer;
+    border: 2px solid #ccc;
+}
+
+.profileImageWrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.uploaderLabel {
+    text-align: center;
+
+}
 
 
 
